# itsi

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Gemfile  Itsi.rb  LICENSE.txt  README.md  Rakefile  fairytale.txt  itsi.gemspec  location_dsl.rb  tasks.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: test.yml
.zed/: settings.json
benchmarks/: Gemfile  README.md  grpc_server.rb  rack_bench.rb  servers.rb
benchmarks/apps/: chunked.ru  full_hijack.ru  io_party.ru  sinatra.ru  static.ru  streaming_response_large.ru
benchmarks/lib/: benchmark_case.rb  server.rb  util.rb
benchmarks/server_configurations/: h2o.conf  itsi.rb  nginx.conf
crates/: _index.md
crates/itsi_acme/: Cargo.toml  README.md
crates/itsi_error/: Cargo.toml
crates/itsi_scheduler/: Cargo.toml  extconf.rb
crates/itsi_scheduler/src/: itsi_scheduler.rs  lib.rs
crates/itsi_scheduler/src/itsi_scheduler/: timer.rs
crates/itsi_server/: Cargo.toml  extconf.rb  test.md
crates/itsi_server/src/: env.rs  lib.rs  prelude.rs
crates/itsi_server/src/body_proxy/: itsi_body_proxy.rs  mod.rs
crates/itsi_server/src/default_responses/: mod.rs
crates/itsi_server/src/default_responses/html/: 403.html  404.html  413.html  429.html  502.html  503.html  index.html
crates/itsi_server/src/default_responses/json/: 401.json  429.json  500.json  502.json  503.json
crates/itsi_server/src/request/: itsi_request.rs  mod.rs
crates/itsi_server/src/response/: itsi_response.rs
crates/itsi_server/src/ruby_types/: README.md  itsi_grpc_call.rs  itsi_grpc_request.rs  itsi_http_request.rs  itsi_http_response.rs  itsi_server.rs  mod.rs
crates/itsi_server/src/ruby_types/itsi_body_proxy/: mod.rs
crates/itsi_server/src/ruby_types/itsi_grpc_response_stream/: mod.rs
crates/itsi_server/src/ruby_types/itsi_grpc_stream/: mod.rs
crates/itsi_server/src/ruby_types/itsi_server/: file_watcher.rs  itsi_server_config.rs
crates/itsi_server/src/server/: bind.rs  bind_protocol.rs  deny_list.rs  frame_stream.rs  http_message_types.rs  io_stream.rs  itsi_server.rs  itsi_service.rs  lifecycle_event.rs  listener.rs  mime_types.rs  mod.rs  process_worker.rs  rate_limiter.rs  redirect_type.rs  request_job.rs  serve_strategy.rs  signal.rs  size_limited_incoming.rs  static_file_cache.rs  static_file_server.rs  thread_worker.rs  tls.rs  types.rs
crates/itsi_server/src/server/binds/: bind.rs  listener.rs  mod.rs  tls.rs
crates/itsi_server/src/server/binds/tls/: locked_dir_cache.rs
crates/itsi_server/src/server/default_responses/html/: 401.html  404.html  413.html  429.html  500.html  502.html  503.html  504.html  index.html
crates/itsi_server/src/server/default_responses/json/: 403.json  404.json  413.json  503.json  504.json
crates/itsi_server/src/server/filter_stack/: filter.rs  mod.rs
crates/itsi_server/src/server/filter_stack/filters/: auth_basic.rs  mod.rs  rate_limit.rs  static_assets.rs  token_source.rs
crates/itsi_server/src/server/itsi_ca/: itsi_ca.crt  itsi_ca.key
crates/itsi_server/src/server/middleware_stack/: middleware.rs  mod.rs
crates/itsi_server/src/server/middleware_stack/middlewares/: allow_list.rs  auth_api_key.rs  auth_basic.rs  auth_jwt.rs  cache_control.rs  compression.rs  cors.rs  csp.rs  deny_list.rs  endpoint.rs  error_response.rs  etag.rs  grpc_service.rs  header_interpretation.rs  intrusion_protection.rs  log_requests.rs  max_body.rs  mod.rs  proxy.rs  rate_limit.rs  redirect.rs  request_headers.rs  response_headers.rs  ruby_app.rs  static_assets.rs  static_response.rs  string_rewrite.rs  token_source.rs
crates/itsi_server/src/server/middleware_stack/middlewares/error_response/: default_responses.rs
crates/itsi_server/src/server/serve_strategy/: acceptor.rs  cluster_mode.rs  mod.rs  single_mode.rs
crates/itsi_server/src/server/tls/: locked_dir_cache.rs
crates/itsi_server/src/services/: bcrypt_hassword_hash.rs  itsi_http_service.rs  mime_types.rs  mod.rs  password_hasher.rs  rate_limiter.rs  static_file_server.rs
crates/itsi_tracing/: Cargo.toml
crates/itsi_tracing/src/: lib.rs
docker/: Dockerfile
docs/: Itsi.rb  about.md  build.rb  hugo.yaml  static_assets.md
examples/: static_assets_example.rb
foo/: Itsi.rb
gems/: _index.md
gems/server/ext/itsi_server/: Cargo.toml
gems/server/ext/itsi_server/src/: lib.rs
gems/server/ext/itsi_server/src/body_proxy/: mod.rs
gems/server/ext/itsi_server/src/request/: itsi_request.rs
gems/server/ext/itsi_server/src/response/: itsi_response.rs  mod.rs
gems/server/ext/itsi_server/src/ruby_types/: itsi_grpc_response.rs  itsi_http_request.rs  itsi_server.rs
gems/server/ext/itsi_server/src/ruby_types/itsi_body_proxy/: mod.rs
gems/server/ext/itsi_server/src/ruby_types/itsi_server/: itsi_server_config.rs
gems/server/ext/itsi_server/src/server/: bind.rs  cache_store.rs  itsi_server.rs  itsi_service.rs  lifecycle_event.rs  listener.rs  mod.rs  process_worker.rs  signal.rs  static_file_server.rs  thread_worker.rs  tls.rs  transfer_protocol.rs
gems/server/ext/itsi_server/src/server/filter_stack/: mod.rs
gems/server/ext/itsi_server/src/server/filter_stack/filters/: auth_jwt.rs  compression.rs  cors.rs
gems/server/ext/itsi_server/src/server/itsi_ca/: itsi_ca.crt
gems/server/ext/itsi_server/src/server/middleware_stack/: middleware.rs  mod.rs
gems/server/ext/itsi_server/src/server/middleware_stack/middlewares/: auth_api_key.rs  auth_basic.rs  auth_jwt.rs  cache_control.rs  cors.rs  error_response.rs  etag.rs  grpc_service.rs  log_requests.rs  logging.rs  mod.rs  proxy.rs  redirect.rs  response_headers.rs  ruby_app.rs  static_assets.rs
gems/server/ext/itsi_server/src/server/serve_strategy/: cluster_mode.rs  mod.rs  single_mode.rs
gems/server/ext/itsi_server/src/stream_writer/: mod.rs
grpc_test/: Itsi.rb  echo.proto  echo_pb.rb  echo_service_impl.rb  echo_services_pb.rb
lib/: itsi.rb
sandbox/: README.md
scheduler/: Cargo.toml  LICENSE.txt  Rakefile  itsi-scheduler.gemspec
server/: Cargo.toml  README.md  Rakefile  itsi-server.gemspec
test/: test_helper.rb
(+960 files in other folders)
