# This Cargo.toml is here to let externals tools (IDEs, etc.) know that this is
# a Rust project. Your extensions dependencies should be added to the Cargo.toml
# in the ext/ directory.

[workspace]
members = [
  "./crates/itsi_scheduler",
  "./crates/itsi_server",
  "./crates/itsi_error",
  "./crates/itsi_tracing",
  "./crates/itsi_rb_helpers",
]
resolver = "2"
