[package]
name = "itsi-scheduler"
version = "0.2.10"
edition = "2021"
authors = ["Wouter Coppieters <wc@pico.net.nz>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7.1", features = ["rb-sys", "bytes"] }
derive_more = { version = "2.0.1", features = ["debug"] }
itsi_tracing = { path = "../itsi_tracing" }
itsi_rb_helpers = { path = "../itsi_rb_helpers" }
itsi_error = { path = "../itsi_error" }
itsi_instrument_entry = { path = "../itsi_instrument_entry" }
parking_lot = "0.12.3"
mio = { version = "1.0.3", features = ["os-poll", "os-ext"] }
rb-sys = "0.9.105"
bytes = "1.10.1"
nix = "0.29.0"
tracing = "0.1.41"
