[package]
name = "itsi-server"
version = "0.1.0"
edition = "2021"
authors = ["Wouter Coppieters <wc@pico.net.nz>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7.1", features = ["bytes"] }
itsi_tracing = { path = "../itsi_tracing" }
itsi_rb_helpers = { path = "../itsi_rb_helpers" }
itsi_error = { path = "../itsi_error" }
socket2 = "0.5.8"
parking_lot = "0.12.3"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.23"
bytes = "1.3"
rcgen = { version = "0.13.2", features = ["x509-parser", "pem"] }
base64 = "0.22.1"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full", "server", "http1", "http2"] }
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
derive_more = { version = "2.0.1", features = ["debug"] }
http = "1.2.0"
crossbeam = "0.8.4"
