[package]
name = "itsi-server"
version = "0.2.15"
edition = "2021"
authors = ["Wouter Coppieters <wc@pico.net.nz>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-compression = { version = "0.4.21", features = [
  "futures-io",
  "tokio",
  "zstd",
  "brotli",
  "deflate",
  "gzip",
  "zlib",
] }
async-channel = "2.3.1"
async-trait = "0.1.87"
bcrypt = "0.17.0"
base64 = "0.22.1"
bytes = "1.3"
chrono = "0.4.35"
derive_more = { version = "2.0.1", features = ["debug"] }
dirs = "6.0.0"
either = "1.15.0"
fs2 = "0.4.3"
futures = "0.3.31"
globset = "0.4.16"
http = "1.3.1"
http-body-util = "0.1.2"
httpdate = "1.0.3"
httparse = "1.10.1"
hyper = { version = "1.5.0", features = ["full", "server", "http1", "http2"] }
hyper-util = { version = "0.1.10", features = ["full"] }
itsi_error = { path = "../itsi_error" }
itsi_rb_helpers = { path = "../itsi_rb_helpers" }
itsi_tracing = { path = "../itsi_tracing" }
itsi_acme = { path = "../itsi_acme" }
jsonwebtoken = "9.3.1"
magnus = { version = "0.7.1", features = ["bytes", "rb-sys"] }
notify = { version = "8.0.0" }
nix = { version = "0.29.0", features = [
  "socket",
  "uio",
  "signal",
  "fs",
  "process",
] }
num_cpus = "1.16.0"
parking_lot = "0.12.3"
pin-project = "1.1.9"
phf = { version = "0.11.3", features = ["macros"] }
rand = "0.9.0"
rcgen = { version = "0.13.2", features = ["x509-parser", "pem"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = [
  "stream",
  "rustls-tls",
], default-features = false }
redis = { version = "0.29.2", features = [
  "tokio-comp",
  "r2d2",
  "tokio-rustls-comp",
  "connection-manager",
] }
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_magnus = "0.9.0"
sha2 = "0.10.8"
socket2 = "0.5.8"
sysinfo = "0.33.1"
tempfile = "3.18.0"
tokio = { version = "1.44.1", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["compat"] }
tracing = "0.1.41"
url = "2.5.4"
md5 = "0.7.0"
percent-encoding = "2.3.1"
sha-crypt = "0.5.0"
argon2 = "0.5.3"
core_affinity = "0.8.3"
memchr = "2.7.4"
quick_cache = "0.6.13"
