[package]
name = "itsi_tracing"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "std",
  "fmt",
  "json",
  "ansi",
] }
tracing-attributes = "0.1"
atty = "0.2.14"
