[package]
name = "itsi-server"
version = "0.1.0"
edition = "2021"
authors = ["Wouter Coppieters <wc@pico.net.nz>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7.1", features = ["bytes", "rb-sys"] }
itsi_tracing = { path = "../itsi_tracing" }
itsi_rb_helpers = { path = "../itsi_rb_helpers" }
itsi_error = { path = "../itsi_error" }
socket2 = "0.5.8"
parking_lot = "0.12.3"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.2"
bytes = "1.3"
tokio-rustls-acme = "0.6.0"
rcgen = { version = "0.13.2", features = ["x509-parser", "pem"] }
base64 = "0.22.1"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full", "server", "http1", "http2"] }
tokio = { version = "1.44.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
derive_more = { version = "2.0.1", features = ["debug"] }
http = "1.3.1"
crossbeam = "0.8.4"
futures = "0.3.31"
nix = { version = "0.29.0", features = ["socket", "uio", "signal"] }
pin-project = "1.1.9"
rb-sys = "0.9.111"
tracing = "0.1.41"
tokio-util = "0.7.13"
tokio-stream = "0.1.17"
httparse = "1.10.1"
async-channel = "2.3.1"
tempfile = "3.18.0"
sysinfo = "0.33.1"
rustls = "0.23.23"
fs2 = "0.4.3"
ring = "0.17.14"
async-trait = "0.1.87"
dirs = "6.0.0"
